# Otus_hw12

./: CMakeLists.txt
.github/workflows/: mapreduce.yaml  release.yaml
include/: file_preparation.h  map_reduce.h
src/: file_preparation.cpp  main.cpp  map_reduce.cpp
